# cargo-flatpak

./: Cargo.toml  README.md
src/: cli.rs  main.rs  manifest.rs  sources.rs
