[package]
name = "cargo-flatpack"
version = "0.0.0"
edition = "2021"

authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
description = "Generate flatpak manifest from Cargo.lock"
keywords = ["flatpak"]
license = "MIT"
repository = "https://github.com/PolyMeilex/cargo-flatpak"
documentation = "https://docs.rs/cargo-flatpak"

[dependencies]
anyhow = "1.0.74"
clap = { version = "3.2.22", features = ["derive"] }
glob = "0.3.1"
log = "0.4.17"
pathdiff = "0.2.1"
pollster = "0.3.0"
reqwest = "0.11.18"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
sha2 = "0.10.7"
shellexpand = "3.1.0"
tempfile = "3.7.1"
toml = { version = "0.5.9", features = ["preserve_order"] }
url = "2.4.0"
