[package]
name = "cargo-flatpak"
version = "0.0.1"
edition = "2021"

authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
description = "Generate flatpak manifest from Cargo.lock"
keywords = ["flatpak"]
license = "MIT"
repository = "https://github.com/PolyMeilex/cargo-flatpak"
documentation = "https://docs.rs/cargo-flatpak"

[dependencies]
anyhow = "1.0.74"
cargo_metadata = "0.18.1"
clap = { version = "4.5.16", features = ["derive"] }
glob = "0.3.1"
log = "0.4.17"
pathdiff = "0.2.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
url = "2.4.0"
